--- a/mathematics/applied/electrical-engineering/combinational-logic/74x151-multiplexer/74x151-multiplexer.tex
+++ b/mathematics/applied/electrical-engineering/combinational-logic/74x151-multiplexer/74x151-multiplexer.tex
@@ -7,11 +7,12 @@
         muxdemux, muxdemux def={
             Lh=8, Rh=6, w=4,  % Size
             NT=0,             % None top
-            NB=3,             % 3 pin on bottom
-            NL=9,             % 9 pins on the left
+            NB=7,             % 7 pin on bottom (using 3)
+            NL=14,            % 14 pins on the left (using 9)
             NR=2,             % 2 pins on the right
         },
-        % draw only left pins={1},
+        draw only left pins={},
+        draw only bottom pins={},
     },
 }
 
@@ -23,12 +24,12 @@
         
         \node[mux4x1]                         (MUX)   at (0,0)                            {};
         %LEFT
-        \foreach \i [count=\iz from 0] in {1,...,8} {
+        \foreach \i [count=\iz from 0] in {3,...,10} {
             \node[right, font=\tiny\ttfamily] (DP\iz) at ($(MUX.blpin \i) + (0, 0)$)    {\normalsize $d\iz$};
             \coordinate[]                     (D\iz)  at ($(MUX.blpin \i) + (-1, 0)$)   {};
         }
-        \node[right, font=\tiny\ttfamily]     (ENP)   at ($(MUX.blpin 9) + (0, 0)$)     {\normalsize $en$};
-        \coordinate[]                         (EN)    at ($(MUX.blpin 9) + (-1, 0)$)    {};
+        \node[right, font=\tiny\ttfamily]     (ENP)   at ($(MUX.blpin 12) + (0, 0)$)    {\normalsize $en$};
+        \coordinate[]                         (EN)    at ($(MUX.blpin 12) + (-1, 0)$)   {};
         %RIGHT
         \node[left, font=\tiny\ttfamily]      (YP)    at ($(MUX.brpin 1) + (0, 0)$)     {\normalsize $y$};
         \coordinate[]                         (Y)     at ($(MUX.brpin 1) + (1, 0)$)     {};
@@ -37,29 +38,29 @@
         %TOP
         \node[]                               (NAME)  at ($(MUX) + (0, 3.0)$)           {\Large \textbf {74x151 MULTIPLEXER}};
         %BOTTOM
-        \node[above, font=\tiny\ttfamily]     (AP)    at ($(MUX.bbpin 1) + (0, .1)$)    {\normalsize $a$};
-        \coordinate[]                         (A)     at ($(MUX.bbpin 1) + (0, -1)$)    {};
-        \node[above, font=\tiny\ttfamily]     (BP)    at ($(MUX.bbpin 2) + (0, .1)$)    {\normalsize $b$};
-        \coordinate[]                         (B)     at ($(MUX.bbpin 2) + (0, -1)$)    {};
-        \node[above, font=\tiny\ttfamily]     (CP)    at ($(MUX.bbpin 3) + (0, .1)$)    {\normalsize $c$};
-        \coordinate[]                         (C)     at ($(MUX.bbpin 3) + (0, -1)$)    {};
+        \node[above, font=\tiny\ttfamily]     (AP)    at ($(MUX.bbpin 3) + (0, .1)$)    {\normalsize $a$};
+        \coordinate[]                         (A)     at ($(MUX.bbpin 3) + (0, -1)$)    {};
+        \node[above, font=\tiny\ttfamily]     (BP)    at ($(MUX.bbpin 4) + (0, .1)$)    {\normalsize $b$};
+        \coordinate[]                         (B)     at ($(MUX.bbpin 4) + (0, -1)$)    {};
+        \node[above, font=\tiny\ttfamily]     (CP)    at ($(MUX.bbpin 5) + (0, .1)$)    {\normalsize $c$};
+        \coordinate[]                         (C)     at ($(MUX.bbpin 5) + (0, -1)$)    {};
         %CONNECT
-        \foreach \i [count=\iz from 0] in {1,...,8} {
+        \foreach \i [count=\iz from 0] in {3,...,10} {
             \draw[] (MUX.blpin \i) -- (D\iz);
         }
-        \draw[] (MUX.blpin 9) -- (EN);
+        \draw[] (MUX.blpin 12) -- (EN);
         \draw[] (MUX.brpin 1) -- (Y);
         \draw[] (MUX.brpin 2) -- (W);
-        \draw[] (MUX.bbpin 1) -- (A);
-        \draw[] (MUX.bbpin 2) -- (B);
-        \draw[] (MUX.bbpin 3) -- (C);
+        \draw[] (MUX.bbpin 3) -- (A);
+        \draw[] (MUX.bbpin 4) -- (B);
+        \draw[] (MUX.bbpin 5) -- (C);
         
         %DOTTED LINE
-        \draw[dotted] ($(MUX.blpin 2) + (0, 0)$) -- ($(MUX.brpin 1) + (0, 0)$);
+        \draw[dotted] ($(MUX.blpin 4) + (0, 0)$) -- ($(MUX.brpin 1) + (0, 0)$);
 
         %INPUTS
         \node[]       (INPUT0)  at ($(D0) + (-.3, 0)$)  {\normalsize $0$};
-        \node[green]  (INPUT1)  at ($(D1) + ( -1, 0)$)  {\normalsize $...0110110$};
+        \node[]       (INPUT1)  at ($(D1) + ( -1, 0)$)  {\normalsize $...0110110$};
         \node[]       (INPUT2)  at ($(D2) + (-.3, 0)$)  {\normalsize $0$};
         \node[]       (INPUT3)  at ($(D3) + (-.3, 0)$)  {\normalsize $0$};
         \node[]       (INPUT4)  at ($(D4) + (-.3, 0)$)  {\normalsize $0$};
