--- a/mathematics/applied/electrical-engineering/combinational-logic/decoder-3-8/decoder-3-8.tex
+++ b/mathematics/applied/electrical-engineering/combinational-logic/decoder-3-8/decoder-3-8.tex
@@ -43,7 +43,7 @@
 
         %OUTPUTS
         \node[]       (OUTPUT0)  at ($(OUT0) + (.3, 0)$)  {\normalsize $0$};
-        \node[green]  (OUTPUT0)  at ($(OUT1) + (.3, 0)$)  {\normalsize $1$};
+        \node[]       (OUTPUT0)  at ($(OUT1) + (.3, 0)$)  {\normalsize $1$};
         \node[]       (OUTPUT0)  at ($(OUT2) + (.3, 0)$)  {\normalsize $0$};
         \node[]       (OUTPUT0)  at ($(OUT3) + (.3, 0)$)  {\normalsize $0$};
         \node[]       (OUTPUT0)  at ($(OUT4) + (.3, 0)$)  {\normalsize $0$};
