--- a/mathematics/applied/electrical-engineering/combinational-logic/encoder-8-3/encoder-8-3.tex
+++ b/mathematics/applied/electrical-engineering/combinational-logic/encoder-8-3/encoder-8-3.tex
@@ -40,7 +40,7 @@
         
         %INPUTS
         \node[]       (OUTPUT0)  at ($(IN0) + (-.3, 0)$)  {\normalsize $0$};
-        \node[green]  (OUTPUT0)  at ($(IN1) + (-.3, 0)$)  {\normalsize $1$};
+        \node[]       (OUTPUT0)  at ($(IN1) + (-.3, 0)$)  {\normalsize $1$};
         \node[]       (OUTPUT0)  at ($(IN2) + (-.3, 0)$)  {\normalsize $0$};
         \node[]       (OUTPUT0)  at ($(IN3) + (-.3, 0)$)  {\normalsize $0$};
         \node[]       (OUTPUT0)  at ($(IN4) + (-.3, 0)$)  {\normalsize $0$};
