--- a/mathematics/applied/electrical-engineering/combinational-logic/mux-4x1/mux-4x1.tex
+++ b/mathematics/applied/electrical-engineering/combinational-logic/mux-4x1/mux-4x1.tex
@@ -47,7 +47,7 @@
 
         %INPUTS
         \node[]       (INPUT0)  at ($(IN0) + (-.3, 0)$)  {\normalsize $0$};
-        \node[green]  (INPUT0)  at ($(IN1) + ( -1, 0)$)  {\normalsize $...0110110$};
+        \node[]       (INPUT0)  at ($(IN1) + ( -1, 0)$)  {\normalsize $...0110110$};
         \node[]       (INPUT0)  at ($(IN2) + (-.3, 0)$)  {\normalsize $0$};
         \node[]       (INPUT0)  at ($(IN3) + (-.3, 0)$)  {\normalsize $0$};
         
