--- a/mathematics/applied/electrical-engineering/combinational-logic/demux-1x4/demux-1x4.tex
+++ b/mathematics/applied/electrical-engineering/combinational-logic/demux-1x4/demux-1x4.tex
@@ -50,7 +50,7 @@
 
         %OUTPUTS
         \node[]       (OUTPUT0)  at ($(OUT0) + (.3, 0)$)  {\normalsize $0$};
-        \node[green]  (OUTPUT0)  at ($(OUT1) + ( 1, 0)$)  {\normalsize $...0110110$};
+        \node[]       (OUTPUT0)  at ($(OUT1) + ( 1, 0)$)  {\normalsize $...0110110$};
         \node[]       (OUTPUT0)  at ($(OUT2) + (.3, 0)$)  {\normalsize $0$};
         \node[]       (OUTPUT0)  at ($(OUT3) + (.3, 0)$)  {\normalsize $0$};
         
