--- a/mathematics/applied/electrical-engineering/combinational-logic/mux-to-demux/mux-to-demux.tex
+++ b/mathematics/applied/electrical-engineering/combinational-logic/mux-to-demux/mux-to-demux.tex
@@ -60,7 +60,7 @@
             %INPUTS
             \node[]       (INPUT0)  at ($(IN0) + (-.3, 0)$)  {\normalsize $0$};
             \node[]       (INPUT0)  at ($(IN1) + (-.3, 0)$)  {\normalsize $0$};
-            \node[green]  (INPUT0)  at ($(IN2) + (-1, 0)$)   {\normalsize $...0110110$};
+            \node[]       (INPUT0)  at ($(IN2) + (-1, 0)$)   {\normalsize $...0110110$};
             \node[]       (INPUT0)  at ($(IN3) + (-.3, 0)$)  {\normalsize $0$};
 
             %SELECT
@@ -94,7 +94,7 @@
 
             %OUTPUTS
             \node[]       (OUTPUT0)  at ($(OUT0) + (.3, 0)$)  {\normalsize $0$};
-            \node[green]  (OUTPUT0)  at ($(OUT1) + ( 1, 0)$)  {\normalsize $...0110110$};
+            \node[]       (OUTPUT0)  at ($(OUT1) + ( 1, 0)$)  {\normalsize $...0110110$};
             \node[]       (OUTPUT0)  at ($(OUT2) + (.3, 0)$)  {\normalsize $0$};
             \node[]       (OUTPUT0)  at ($(OUT3) + (.3, 0)$)  {\normalsize $0$};
             
