--- a/mathematics/applied/electrical-engineering/combinational-logic/encoder-8-3/encoder-8-3.tex
+++ b/mathematics/applied/electrical-engineering/combinational-logic/encoder-8-3/encoder-8-3.tex
@@ -21,35 +21,35 @@
 
     \begin{circuitikz}[scale=1.0, transform shape]
         
-        \node[encode8to3]                     (ENCODE)   at (0,0)                            {};
+        \node[encode8to3]                     (ENCODE)  at (0,0)                            {};
         %LEFT
         \foreach \i [count=\iz from 0] in {1,...,8} {
-            \node[right, font=\tiny\ttfamily] (DIN\iz) at ($(ENCODE.blpin \i) + (0, 0)$)     {\normalsize $in[\iz]$};
-            \coordinate[]                     (IN\iz)  at ($(ENCODE.blpin \i) + (-1, 0)$)    {};
+            \node[right, font=\tiny\ttfamily] (DIN\iz)  at ($(ENCODE.blpin \i) + (0, 0)$)     {\normalsize $in[\iz]$};
+            \coordinate[]                     (IN\iz)   at ($(ENCODE.blpin \i) + (-1, 0)$)    {};
         }
         %RIGHT
-        \node[left, font=\tiny\ttfamily]      (DOUT0)  at ($(ENCODE.brpin 1) + (0, 0)$)      {\normalsize $[2\:0]out$};
-        \coordinate[]                         (OUT0)   at ($(ENCODE.brpin 1) + (1, 0)$)      {};        
+        \node[left, font=\tiny\ttfamily]      (DOUT)    at ($(ENCODE.brpin 1) + (0, 0)$)      {\normalsize $[2\:0]out$};
+        \coordinate[]                         (OUT)     at ($(ENCODE.brpin 1) + (1, 0)$)      {};        
         %TOP
-        \node[]                               (NAME)   at ($(ENCODE) + (0, 3.0)$)            {\Large \textbf {ENCODER 8-3}};
+        \node[]                               (NAME)    at ($(ENCODE) + (0, 3.0)$)            {\Large \textbf {ENCODER 8-3}};
         %CONNECT
         \foreach \i [count=\iz from 0] in {1,...,8} {
             \draw[] (ENCODE.blpin \i) -- (IN\iz);
         }
-        \draw[] (ENCODE.brpin 1) -- (OUT0);
+        \draw[] (ENCODE.brpin 1) -- (OUT);
         
         %INPUTS
-        \node[]       (OUTPUT0)  at ($(IN0) + (-.3, 0)$)  {\normalsize $0$};
-        \node[]       (OUTPUT0)  at ($(IN1) + (-.3, 0)$)  {\normalsize $1$};
-        \node[]       (OUTPUT0)  at ($(IN2) + (-.3, 0)$)  {\normalsize $0$};
-        \node[]       (OUTPUT0)  at ($(IN3) + (-.3, 0)$)  {\normalsize $0$};
-        \node[]       (OUTPUT0)  at ($(IN4) + (-.3, 0)$)  {\normalsize $0$};
-        \node[]       (OUTPUT0)  at ($(IN5) + (-.3, 0)$)  {\normalsize $0$};
-        \node[]       (OUTPUT0)  at ($(IN6) + (-.3, 0)$)  {\normalsize $0$};
-        \node[]       (OUTPUT0)  at ($(IN7) + (-.3, 0)$)  {\normalsize $0$};
+        \node[]       (INPUT0)  at ($(IN0) + (-.3, 0)$)  {\normalsize $0$};
+        \node[]       (INPUT1)  at ($(IN1) + (-.3, 0)$)  {\normalsize $1$};
+        \node[]       (INPUT2)  at ($(IN2) + (-.3, 0)$)  {\normalsize $0$};
+        \node[]       (INPUT3)  at ($(IN3) + (-.3, 0)$)  {\normalsize $0$};
+        \node[]       (INPUT4)  at ($(IN4) + (-.3, 0)$)  {\normalsize $0$};
+        \node[]       (INPUT5)  at ($(IN5) + (-.3, 0)$)  {\normalsize $0$};
+        \node[]       (INPUT6)  at ($(IN6) + (-.3, 0)$)  {\normalsize $0$};
+        \node[]       (INPUT7)  at ($(IN7) + (-.3, 0)$)  {\normalsize $0$};
 
         % OUTPUTS
-        \node[] (INPUT0)  at ($(OUT0) + (.3, 0)$)  {\normalsize $010$};
+        \node[]       (OUTPUT)  at ($(OUT) + (.3, 0)$)   {\normalsize $010$};
         
     \end{circuitikz}
 
