--- a/mathematics/pure/structures/algebra/f-of-x-equals-1-over-x/f-of-x-equals-1-over-x.tex
+++ b/mathematics/pure/structures/algebra/f-of-x-equals-1-over-x/f-of-x-equals-1-over-x.tex
@@ -26,23 +26,12 @@
         }
     ]
     \addplot[
-        domain= 0:7,
-        samples=200,
+        domain= -7:7,
+        samples=50,
         color=red
         ] 
-        {sqrt(x)};
-    \addplot[
-        domain= 0:7,
-        samples=200,
-        color=red
-        ] 
-        {-sqrt(x)};
-    \addplot[
-        color=blue, 
-        mark=none
-        ]
-        coordinates {(2, -6) (2, 6)};
-    \addlegendentry{$f(x) = \sqrt{x}$}
+        {1/x};
+    \addlegendentry{$f(x) = \frac{1}{x}$}
     \end{axis}
     \end{tikzpicture}
 }
